--- a/css/sass/styles.scss
+++ b/css/sass/styles.scss
@@ -1,59 +1,131 @@
+@import 'functions';
+@import 'mixins';
+@import 'settings';
+@import 'fonts';
+@import 'prism';
+
+/*--- GENERALS ---*/
+
+body {
+  font-family: $family-serif, Arial, sans-serif;
+  font-size: 100%;
+  @include smoothfonts;
+  background: white;
+  color: $black;
+}
+
+
+/*-- RESET --*/
+
+button,
+input {
+  font-family: $family-serif, Arial, sans-serif;
+}
+
+button {
+  display: block;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-shadow: none;
+  box-shadow: none;
+  background: $blue;
+  cursor: pointer;
+  border: 0;
+  color: white;
+  border-radius: 30px;
+  margin: 15px 0;
+  &:focus {
+    outline: 0;
+  }
+}
+
 .grid {
-  margin: 0;
-  padding: 0;
   list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
-  -webkit-box-align: stretch;
-  -ms-flex-align: stretch;
-  align-items: stretch;
-  -ms-flex-line-pack: stretch;
-  align-content: stretch;
-  .item {
-    width: (100%/3);
-    box-sizing: border-box;
-    padding: 20px;
-    .inner {
-      box-sizing: border-box;
-      height: 100%;
-      padding: 20px;
-      background: white;
-      box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
-    }
+  height: 100%;
+  width: 50%;
+  overflow: auto;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  @include flex;
+}
+
+.item {
+  width: (100%/2);
+  box-sizing: border-box;
+  padding: 20px;
+}
+
+.item__inner {
+  box-sizing: border-box;
+  height: 100%;
+  padding: 20px 20px 20px 25px;
+  background: white;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
+}
+
+.item_active {
+  button{
+    background: desaturate($blue, 50%);
+  }
+  .item__inner {
+    border-left: 5px solid $blue;
+    padding-left: 20px;
   }
 }
 
 .view {
-  width: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
   box-sizing: border-box;
-  margin: 0;
   padding: 20px;
-  margin: 20px;
-  background: white;
-  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
-  height: 50vh;
+  height: 100%;
   .inner {
+    position: relative;
+    box-sizing: border-box;
+    padding: 40px;
     height: 100%;
+    background: white;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
   }
 }
 
+.info {
+  float: left;
+}
+
 .code {
-  height: 100%;
-  width: 100%;
-  background: #f1f1f1;
+  position: absolute;
+  bottom: 40px;
+  height: calc(50% - 40px);
+  width: calc(100% - 80px);
+  float: right;
+  border: 1px solid #f1f1f1;
+  background: rgba(#f1f1f1, 0.5);
   padding: 20px;
   box-sizing: border-box;
   overflow-x: auto;
   font-size: 12px;
   color: lighten(black, 30%);
+}
+
+.title {
+  display: block;
+  padding-right: 20px;
+  margin-bottom: 10px;
+  color: $blue;
+  font-size: 1.8em;
+  line-height: 0.85;
+  text-decoration: none;
+  overflow-wrap: break-word;
+  transition: opacity 200ms ease-in-out;
+}
+.wrapper{
+  width: 90vw;
+  height: 90vh;
+  position: relative;
+  margin: 5vh auto 0 auto;
+
 }
