--- a/css/sass/_fonts.scss
+++ b/css/sass/_fonts.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
-@import url('https://fonts.googleapis.com/css?family=Rokkitt:300,400');
-
+//@import url('https://fonts.googleapis.com/css?family=Rokkitt:300,400');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700');
 
 $family-sans: 'Open Sans';
-$family-serif: 'Rokkitt';
+$family-serif: 'Montserrat';
 
