--- a/css/sass/styles.scss
+++ b/css/sass/styles.scss
@@ -30,26 +30,32 @@ button {
   text-shadow: none;
   box-shadow: none;
   background: $blue;
-cursor: pointer;
-    border: 0;
-    color: white;
-    border-radius: 30px;
-    margin: 15px 0;
-    text-transform: uppercase;
-    height: 30px;
-    line-height: 30px;
-    font-size: 13px;
-    padding: 0 14px;
+  cursor: pointer;
+  border: 1px solid $blue;
+  color: white;
+  border-radius: 30px;
+  text-transform: uppercase;
+  height: 28px;
+  line-height: 27px;
+  font-size: 13px;
+  padding: 0 14px;
+  position: absolute;
+  bottom: 0;
+  right: 20px;
+  margin-bottom: 20px;
   &:focus {
     outline: 0;
+  }
+  &:hover {
+    background: white;
+    color: $blue;
   }
 }
 
 .grid {
   list-style: none;
   height: 100%;
-  width: 50%;
-  overflow: auto;
+  width: 30%;
   position: absolute;
   bottom: 0;
   right: 0;
@@ -57,21 +63,29 @@ cursor: pointer;
 }
 
 .item {
-  width: (100%/2);
+  width: 100%;
   box-sizing: border-box;
   padding: 20px;
 }
 
 .item__inner {
+  position: relative;
   box-sizing: border-box;
   height: 100%;
-  padding: 20px 20px 20px 25px;
+  padding: 20px 20px 65px 25px;
   background: white;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
+  transition: all 200ms ease-in-out;
+  .title {
+    font-size: 1.3em;
+  }
+  .description {
+    font-size: 0.9em;
+  }
 }
 
 .item_active {
-  button{
+  button {
     display: none;
   }
   .item__inner {
@@ -79,17 +93,20 @@ cursor: pointer;
     padding-left: 20px;
     background: $blue;
     color: white;
+    .title {
+      color: white;
+    }
   }
 }
 
 .view {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 50%;
+  position: fixed;
+  top: 5vh;
+  left: 2.5vw;
+  width: calc(70% - 5vw);
   box-sizing: border-box;
   padding: 20px;
-  height: 100%;
+  height: calc(100% - 8vh);
   .inner {
     position: relative;
     box-sizing: border-box;
@@ -107,7 +124,7 @@ cursor: pointer;
 .code {
   position: absolute;
   bottom: 40px;
-  height: calc(50% - 40px);
+  height: calc(60% - 40px);
   width: calc(100% - 80px);
   float: right;
   border: 1px solid #f1f1f1;
@@ -125,15 +142,20 @@ cursor: pointer;
   margin-bottom: 10px;
   color: $blue;
   font-size: 1.8em;
-  line-height: 0.85;
+  line-height: 1;
   text-decoration: none;
   overflow-wrap: break-word;
+  font-weight: 400;
   transition: opacity 200ms ease-in-out;
 }
-.wrapper{
+
+.description {
+  font-size: 1.2em;
+}
+
+.wrapper {
   width: 90vw;
   height: 90vh;
   position: relative;
   margin: 5vh auto 0 auto;
-
 }
