tabs for each gist files

--- a/css/sass/styles.scss
+++ b/css/sass/styles.scss
@@ -3,6 +3,8 @@
 @import 'settings';
 @import 'fonts';
 @import 'prism';
+//---COLORS
+$base: #525e74;
 
 /*--- GENERALS ---*/
 
@@ -11,7 +13,7 @@ body {
   font-size: 100%;
   @include smoothfonts;
   background: white;
-  color: $black;
+  color: $base;
   font-weight: 300;
 }
 
@@ -114,33 +116,22 @@ button {
     height: 100%;
     background: white;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto 1fr;
+    grid-column-gap: 0;
+    grid-row-gap: 20px;
+    justify-items: stretch;
+    -webkit-box-align: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
   }
-}
-
-.info {
-  float: left;
-}
-
-.code {
-  position: absolute;
-  bottom: 40px;
-  height: calc(60% - 40px);
-  width: calc(100% - 80px);
-  float: right;
-  border: 1px solid #f1f1f1;
-  background: rgba(#f1f1f1, 0.5);
-  padding: 20px;
-  box-sizing: border-box;
-  overflow-x: auto;
-  font-size: 0.9em;
-  color: lighten(black, 30%);
 }
 
 .title {
   display: block;
   padding-right: 20px;
   margin-bottom: 10px;
-  color: $blue;
   font-size: 1.8em;
   line-height: 1;
   text-decoration: none;
@@ -149,13 +140,67 @@ button {
   transition: opacity 200ms ease-in-out;
 }
 
-.description {
-  font-size: 1.2em;
-}
-
 .wrapper {
   width: 90vw;
   height: 90vh;
   position: relative;
   margin: 5vh auto 0 auto;
+}
+
+
+/*--- info --*/
+
+.info {
+  padding-bottom: 10%;
+
+  &__title {
+    font-size: 1.5em;
+    font-weight: 700;
+  }
+  &__date{
+    font-size: 0.9em;
+    color: lighten($base, 30%);
+  }
+}
+
+
+/*--- CODE --*/
+
+.code {
+  position: relative;
+  width: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
+  font-size: 0.9em;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto 1fr;
+    grid-column-gap: 0;
+    grid-row-gap: 0;
+    justify-items: stretch;
+    -webkit-box-align: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;  
+  &__tabs {
+    padding: 20px;
+    overflow-x: auto;
+    border: 1px solid lighten($base, 50%);
+    ;
+    background: lighten($base, 60%);
+  }
+  &__nav {
+    &__item {
+      display: inline-block;
+      margin: 0 5px 10px 0;
+      padding: 5px 20px;
+      border: 1px solid lighten($base, 55%);
+      background: lighten($base, 55%);
+      cursor: pointer;
+      &_active {
+        cursor: default;
+        background: white;
+        border: 1px solid lighten($base, 30%);
+      }
+    }
+  }
 }
