--- a/css/sass/_functions.scss
+++ b/css/sass/_functions.scss
@@ -17,3 +17,24 @@
   -ms-flex-line-pack: stretch;
   align-content: stretch;
 }
+
+@mixin shadow{
+  box-shadow: 1px 2px 20px 2px rgba(0, 0, 0, 0.15);
+}
+
+@mixin placeholder {
+  &::-webkit-input-placeholder {
+    @content;
+  }
+  &:-moz-placeholder {
+    /* Firefox 18- */
+    @content;
+  }
+  &::-moz-placeholder {
+    /* Firefox 19+ */
+    @content;
+  }
+  &:-ms-input-placeholder {
+    @content;
+  }
+}
