--- a/css/sass/styles.scss
+++ b/css/sass/styles.scss
@@ -61,28 +61,26 @@ button {
   position: absolute;
   bottom: 0;
   right: 0;
-  @include flex;
 }
 
 .item {
   width: 100%;
   box-sizing: border-box;
   padding: 20px;
-}
-
-.item__inner {
-  position: relative;
-  box-sizing: border-box;
-  height: 100%;
-  padding: 20px 20px 65px 25px;
-  background: white;
-  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
-  transition: all 200ms ease-in-out;
-  .title {
-    font-size: 1.3em;
-  }
-  .description {
-    font-size: 0.9em;
+  &__inner {
+    position: relative;
+    box-sizing: border-box;
+    height: 100%;
+    padding: 20px 20px 65px 25px;
+    background: white;
+    @include shadow;
+    transition: all 200ms ease-in-out;
+    .title {
+      font-size: 1.3em;
+    }
+    .description {
+      font-size: 0.9em;
+    }
   }
 }
 
@@ -115,7 +113,7 @@ button {
     padding: 40px;
     height: 100%;
     background: white;
-    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
+    @include shadow;
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: auto 1fr;
@@ -148,16 +146,45 @@ button {
 }
 
 
+/*--- input --*/
+
+.search {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 20px;
+  &__input {
+    width: 100%;
+    height: 45px;
+    box-sizing: border-box;
+    border: 0;
+    padding: 12px 10px 10px 10px;
+    @include shadow;
+    font-size: 1.1em;
+    line-height: 1.1em;
+    font-weight: 300;
+    background: url('../assets/lupa.svg') no-repeat;
+    background-position: center right 10px;
+    @include placeholder {
+      color: lighten($base, 40%);
+    }
+    &:focus{
+      outline: 0;
+      border-bottom: 2px solid lighten($base,35%);
+      padding-bottom: 8px;
+    }
+  }
+}
+
+
 /*--- info --*/
 
 .info {
   padding-bottom: 10%;
-
   &__title {
     font-size: 1.5em;
     font-weight: 700;
   }
-  &__date{
+  &__date {
     font-size: 0.9em;
     color: lighten($base, 30%);
   }
@@ -172,15 +199,15 @@ button {
   box-sizing: border-box;
   overflow: hidden;
   font-size: 0.9em;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: auto 1fr;
-    grid-column-gap: 0;
-    grid-row-gap: 0;
-    justify-items: stretch;
-    -webkit-box-align: stretch;
-    -ms-flex-align: stretch;
-    align-items: stretch;  
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: auto 1fr;
+  grid-column-gap: 0;
+  grid-row-gap: 0;
+  justify-items: stretch;
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
   &__tabs {
     padding: 20px;
     overflow-x: auto;
