--- a/css/styles.css
+++ b/css/styles.css
@@ -158,34 +158,24 @@ button {
   width: 30%;
   position: absolute;
   bottom: 0;
-  right: 0;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-flex-direction: row;
-  flex-direction: row; }
+  right: 0; }
 
 .item {
   width: 100%;
   box-sizing: border-box;
   padding: 20px; }
-
-.item__inner {
-  position: relative;
-  box-sizing: border-box;
-  height: 100%;
-  padding: 20px 20px 65px 25px;
-  background: white;
-  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
-  transition: all 200ms ease-in-out; }
-  .item__inner .title {
-    font-size: 1.3em; }
-  .item__inner .description {
-    font-size: 0.9em; }
+  .item__inner {
+    position: relative;
+    box-sizing: border-box;
+    height: 100%;
+    padding: 20px 20px 65px 25px;
+    background: white;
+    box-shadow: 1px 2px 20px 2px rgba(0, 0, 0, 0.15);
+    transition: all 200ms ease-in-out; }
+    .item__inner .title {
+      font-size: 1.3em; }
+    .item__inner .description {
+      font-size: 0.9em; }
 
 .item_active button {
   display: none; }
@@ -211,7 +201,7 @@ button {
     padding: 40px;
     height: 100%;
     background: white;
-    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 1px 2px 20px 2px rgba(0, 0, 0, 0.15);
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: auto 1fr;
@@ -238,6 +228,38 @@ button {
   height: 90vh;
   position: relative;
   margin: 5vh auto 0 auto; }
+
+/*--- input --*/
+.search {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 20px; }
+  .search__input {
+    width: 100%;
+    height: 45px;
+    box-sizing: border-box;
+    border: 0;
+    padding: 12px 10px 10px 10px;
+    box-shadow: 1px 2px 20px 2px rgba(0, 0, 0, 0.15);
+    font-size: 1.1em;
+    line-height: 1.1em;
+    font-weight: 300;
+    background: url("../assets/lupa.svg") no-repeat;
+    background-position: center right 10px; }
+    .search__input::-webkit-input-placeholder {
+      color: #c0c6d2; }
+    .search__input:-moz-placeholder {
+      /* Firefox 18- */
+      color: #c0c6d2; }
+    .search__input::-moz-placeholder {
+      /* Firefox 19+ */
+      color: #c0c6d2; }
+    .search__input:-ms-input-placeholder {
+      color: #c0c6d2; }
+    .search__input:focus {
+      outline: 0;
+      border-bottom: 2px solid #b1b9c8;
+      padding-bottom: 8px; }
 
 /*--- info --*/
 .info {
